Add Inventories functionalities
