# src/router.ts
@@ -2,6 +2,7 @@ import express from 'express';
 import bodyParser from 'body-parser';
 import handleError from './utils/handleError';
 import ProductsRoutes from './routes/ProductsRoutes';
+import InventoriesRoutes from './routes/InventoriesRoutes';
 
 class Router {
 
@@ -12,6 +13,8 @@ class Router {
 
         const productsRoutes = new ProductsRoutes(server);
         server.use('/products', productsRoutes.router );
+        const inventoriesRoutes = new InventoriesRoutes(server);
+        server.use('/inventories', inventoriesRoutes.router );
 
         server.use((err, req, res, next) => {
             handleError(err, res);
